# Foobartory_Back

./: Foobartory_Back.md  README.md  debrief.md  pyproject.toml  run.py
foobar_workers/: manager.py  utils.py  worker.py
tests/: test_manager.py  test_workers.py
