[tool.poetry]
name = "Foobartory"
version = "1.0"
description = "Factory to create foos and bars, foobars and new workers"
authors = ["Yohann Gabory"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^8.0.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
